--- a/scss/lightbox.scss
+++ b/scss/lightbox.scss
@@ -1,11 +1,9 @@
 /* Preload images */
-/* line 2, ../scss/lightbox.scss */
 body:after {
   content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
   display: none;
 }
 
-/* line 7, ../scss/lightbox.scss */
 .lightboxOverlay {
   position: absolute;
   top: 0;
@@ -17,7 +15,6 @@ body:after {
   display: none;
 }
 
-/* line 18, ../scss/lightbox.scss */
 .lightbox {
   position: absolute;
   left: 0;
@@ -28,7 +25,6 @@ body:after {
   font-weight: normal;
 }
 
-/* line 28, ../scss/lightbox.scss */
 .lightbox .lb-image {
   display: block;
   height: auto;
@@ -40,12 +36,10 @@ body:after {
   border-radius: 3px;
 }
 
-/* line 39, ../scss/lightbox.scss */
 .lightbox a img {
   border: none;
 }
 
-/* line 43, ../scss/lightbox.scss */
 .lb-outerContainer {
   position: relative;
   background-color: white;
@@ -60,19 +54,16 @@ body:after {
   border-radius: 4px;
 }
 
-/* line 57, ../scss/lightbox.scss */
 .lb-outerContainer:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 63, ../scss/lightbox.scss */
 .lb-container {
   padding: 4px;
 }
 
-/* line 67, ../scss/lightbox.scss */
 .lb-loader {
   position: absolute;
   top: 43%;
@@ -83,7 +74,6 @@ body:after {
   line-height: 0;
 }
 
-/* line 77, ../scss/lightbox.scss */
 .lb-cancel {
   display: block;
   width: 32px;
@@ -92,7 +82,6 @@ body:after {
   background: url(../img/loading.gif) no-repeat;
 }
 
-/* line 85, ../scss/lightbox.scss */
 .lb-nav {
   position: absolute;
   top: 0;
@@ -102,25 +91,21 @@ body:after {
   z-index: 10;
 }
 
-/* line 94, ../scss/lightbox.scss */
 .lb-container > .nav {
   left: 0;
 }
 
-/* line 98, ../scss/lightbox.scss */
 .lb-nav a {
   outline: none;
-  background-image: url("data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==");
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
 }
 
-/* line 103, ../scss/lightbox.scss */
 .lb-prev, .lb-next {
   height: 100%;
   cursor: pointer;
   display: block;
 }
 
-/* line 109, ../scss/lightbox.scss */
 .lb-nav a.lb-prev {
   width: 34%;
   left: 0;
@@ -134,13 +119,11 @@ body:after {
   transition: opacity 0.6s;
 }
 
-/* line 122, ../scss/lightbox.scss */
 .lb-nav a.lb-prev:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
 
-/* line 127, ../scss/lightbox.scss */
 .lb-nav a.lb-next {
   width: 64%;
   right: 0;
@@ -154,13 +137,11 @@ body:after {
   transition: opacity 0.6s;
 }
 
-/* line 140, ../scss/lightbox.scss */
 .lb-nav a.lb-next:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
 
-/* line 145, ../scss/lightbox.scss */
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
@@ -174,20 +155,17 @@ body:after {
   border-bottom-right-radius: 4px;
 }
 
-/* line 158, ../scss/lightbox.scss */
 .lb-dataContainer:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 164, ../scss/lightbox.scss */
 .lb-data {
   padding: 0 4px;
   color: #ccc;
 }
 
-/* line 169, ../scss/lightbox.scss */
 .lb-data .lb-details {
   width: 85%;
   float: left;
@@ -195,14 +173,12 @@ body:after {
   line-height: 1.1em;
 }
 
-/* line 176, ../scss/lightbox.scss */
 .lb-data .lb-caption {
   font-size: 13px;
   font-weight: bold;
   line-height: 1em;
 }
 
-/* line 182, ../scss/lightbox.scss */
 .lb-data .lb-number {
   display: block;
   clear: left;
@@ -211,7 +187,6 @@ body:after {
   color: #999999;
 }
 
-/* line 190, ../scss/lightbox.scss */
 .lb-data .lb-close {
   display: block;
   float: right;
@@ -228,7 +203,6 @@ body:after {
   transition: opacity 0.2s;
 }
 
-/* line 206, ../scss/lightbox.scss */
 .lb-data .lb-close:hover {
   cursor: pointer;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
